--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -13,7 +13,7 @@
     <!-- <link rel="stylesheet" href="/CSS/styles2.css"> -->
     <link rel="stylesheet" href="../CSS/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/08288d2c26.js" crossorigin="anonymous"></script>
 
 </head>
@@ -23,8 +23,8 @@
     <header>
         <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
-                        alt="logoprincipal"></a>
+                <a target="_blank" class="navbar-brand" href="../index.html"> <img class="navbarBg__logo"
+                        src="../Images/logo.png" alt="logoprincipal"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -39,22 +39,23 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
                             <li class="nav-item">
-                                <a class="navLink" href="../index.html">Inicio</a>
+                                <a target="_blank" class="navLink" href="../index.html">Inicio</a>
                             </li>
 
                             <li class="nav-item ">
-                                <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
+                                <a target="_blank" class="navLink"
+                                    href="../Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                                <a target="_blank" class="navLink" href="../Pages/staff.html">Staff Medico</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="navLink" href="../Pages/contacto.html">Contacto</a>
+                                <a target="_blank" class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a target="_blank" class="navLink" href="../Pages/contacto.html">Contacto</a>
                             </li>
                         </ul>
 
@@ -85,24 +86,25 @@
 
                     <div class="formulario__label">
                         <label class="formulario__label__hijo" for="">Telefono</label>
-                        <input class="formulario__label__input" type="tel"  placeholder="Tu Telefono" required>
-                        
+                        <input class="formulario__label__input" type="tel" placeholder="Tu Telefono" required>
+
 
                     </div>
 
                     <div class="formulario__label">
                         <label class="formulario__label__hijo" for="">Tu mensaje</label>
-                        <textarea class="formulario__textarea" 
-                        placeholder="Envianos tu mensaje" name="" id="" cols="30" rows="10" required></textarea>
+                        <textarea class="formulario__textarea" placeholder="Envianos tu mensaje" name="" id="" cols="30"
+                            rows="10" required></textarea>
                     </div>
 
                     <div class="contenedorBtn">
                         <div class="contenedorBtn__hijo shadow-sm pb-1 bg-dark bg-opacity-25 rounded">
-                            
+
                             <input class="contenedorBtn__boton" type="submit">
                         </div>
 
-                        <div class="contenedorBtn__hijo contenedorBtn__hijo shadow-sm pb-1 bg-dark bg-opacity-25 rounded">
+                        <div
+                            class="contenedorBtn__hijo contenedorBtn__hijo shadow-sm pb-1 bg-dark bg-opacity-25 rounded">
                             <input class="contenedorBtn__boton" type="reset">
                         </div>
                     </div>
@@ -113,7 +115,7 @@
 
 
         <div class="whatsaapIcon container-fluid">
-            <a href="https://web.whatsapp.com/">
+            <a target="_blank" href="https://web.whatsapp.com/">
                 <i class="fa-brands fa-square-whatsapp fa-4x"> </i>
             </a>
         </div>
@@ -124,7 +126,7 @@
 
         <div class="bloqueFooter">
             <div class="bloqueFooter__logo">
-                <img src="../Images/Logo.png" alt="Logofooter">
+                <img src="../Images/Logo.png" alt="Logofooter" loading="lazy">
             </div>
 
             <div class="bloqueFooter__contacto">
@@ -159,8 +161,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
 
