--- a/Pages/obrasSociales.html
+++ b/Pages/obrasSociales.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
+                <a target="_blank" class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
                         alt="logoNavegacion"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -39,22 +39,22 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
                             <li class="nav-item">
-                                <a class="navLink" href="../index.html">Inicio</a>
+                                <a target="_blank" target="_blank" class="navLink" href="../index.html">Inicio</a>
                             </li>
 
                             <li class="nav-item ">
-                                <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
+                                <a target="_blank" class="navLink" href="../Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                                <a target="_blank" class="navLink" href="../Pages/staff.html">Staff Medico</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="navLink" href="../Pages/contacto.html">Contacto</a>
+                                <a target="_blank" class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a target="_blank" class="navLink" href="../Pages/contacto.html">Contacto</a>
                             </li>
                         </ul>
 
@@ -86,12 +86,12 @@
 
             <div class="row">
                 <div class="col-xl-4 col-sm-4 p-5 border border-white styleOSbt_box1 ">
-                    <a href="https://www.osde.com.ar/index.html">
+                    <a target="_blank" href="https://www.osde.com.ar/index.html">
                         <h5 class="text-light">OSDE</h5>
                     </a>
                 </div>
                 <div class="col-xl-8 col-sm-8 p-5 border border-white styleOSbt_box2">
-                    <a href="https://aposlr.gob.ar/">
+                    <a target="_blank" href="https://aposlr.gob.ar/">
                         <h5 class="text-light">APOS</h5>
                     </a>
                 </div>
@@ -100,12 +100,12 @@
             <div class="row">
                 <div class="col-xl-6 col-sm-7 p-5 border border-white styleOSbt_box3">
 
-                    <a href="https://www.galeno.com.ar/quienessomos">
+                    <a target="_blank" target="_blank" href="https://www.galeno.com.ar/quienessomos">
                         <h5 class="text-light">GALEANO</h5>
                     </a>
                 </div>
                 <div class="col-xl-6 col-sm-5 p-5 border border-white styleOSbt_box4">
-                    <a href="https://www.swissmedical.com.ar/prepagaclientes/">
+                    <a target="_blank" href="https://www.swissmedical.com.ar/prepagaclientes/">
                         <h5 class="text-light">SWISS MEDICAL</h5>
                     </a>
                 </div>
@@ -114,7 +114,7 @@
             <div class="row">
                 <div class="col-xl-5 col-sm-4 p-5 border border-white styleOSbt_box5">
 
-                    <a href="https://www.visitar.com.ar/">
+                    <a target="_blank" href="https://www.visitar.com.ar/">
                         <h5 class="text-light">VISITAR</h5>
                     </a>
 
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-xl-7 col-sm-8 p-5 border border-white styleOSbt_box6">
 
-                    <a href="https://www.medife.com.ar/">
+                    <a target="_blank" href="https://www.medife.com.ar/">
                         <h5 class="text-light">MEDIFE</h5>
                     </a>
 
@@ -132,13 +132,13 @@
             <div class="row">
                 <div class="col-xl-8 col-sm-9 p-5 border border-white styleOSbt_box7">
 
-                    <a href="https://www.federada.com/">
+                    <a target="_blank" href="https://www.federada.com/">
                         <h5 class="text-light">FEDERADA SALUD </h5>
                     </a>
                 </div>
 
                 <div class="col-xl-4 col-sm-3 p-5 border border-white styleOSbt_box8">
-                    <a href="https://cpcecba.org.ar/">
+                    <a target="_blank" href="https://cpcecba.org.ar/">
                         <h5 class="text-light">CPCE </h5>
                     </a>
                 </div>
@@ -148,7 +148,7 @@
 
 
         <div class="whatsaapIcon container-fluid">
-            <a href="https://web.whatsapp.com/">
+            <a target="_blank" href="https://web.whatsapp.com/">
                 <i class="fa-brands fa-square-whatsapp fa-4x"> </i>
             </a>
         </div>
